# minions-cam

./: README.md  main.cpp  run_cset.sh
archive/archived/src/: KellerLD.cpp  main.cpp
archive/rawsocket_py/: j_test_raw.py
archive/tcp_c/: client.c  server.c  time_test.c
archive/udp_broadcast_c/: rx.c
archive/udp_broadcast_c/archive/: camera_rx.c  led_main.c  led_tx.c
camera/: CMakeLists.txt  changeme.csv  minions
camera/include/: peripheral.h  synchronization.h
camera/src/: KellerLD.cpp  logger.cpp  m_camera.cpp  m_led.cpp.bak  minions.cpp.bak  peripheral.cpp  synchronization.cpp  utility.cpp
imaging/: CMakeLists.txt  CMakeLists.txt.bak  main.cpp  main.cpp.bak
include/: DS3231.h  KellerLD.h
modules/keller/: CMakeLists.txt
modules/keller/src/: KellerLD.cpp  main.cpp
modules/tcp_synchronization_c/client/: mult_client.c
modules/tcp_synchronization_c/server/: server2.c
modules/tcp_synchronization_c/time_test/: time_test.c
modules/tiff/: test  tiff_test.c  tiff_test.cpp
rawSocket_py/: transmit.py
src/: DS3231.cpp  KellerLD.cpp  main.cpp  utility.cpp
